// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hash.rb 1`] = `
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7 }
numbers

`;

exports[`hash_2.rb 1`] = `
numbers = { one: 1, two: 2, three: 3 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = { one: 1, two: 2, three: 3 }
numbers

`;

exports[`hash_3.rb 1`] = `
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7, eight: 8, nine: 9, ten: 10 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = {
  one: 1,
  two: 2,
  three: 3,
  four: 4,
  five: 5,
  six: 6,
  seven: 7,
  eight: 8,
  nine: 9,
  ten: 10
}
numbers

`;
